--- a/index.html
+++ b/index.html
@@ -1,9 +1,68 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title></title><link href="/css/about.7efacdaf.css" rel="prefetch"><link href="/css/blog.6c8974bb.css" rel="prefetch"><link href="/css/blogDetail.042301d9.css" rel="prefetch"><link href="/css/home.57014983.css" rel="prefetch"><link href="/css/message.8b3f60f8.css" rel="prefetch"><link href="/css/project.1c588897.css" rel="prefetch"><link href="/js/about.9ee24772.js" rel="prefetch"><link href="/js/blog.9a3c025a.js" rel="prefetch"><link href="/js/blogDetail.95b4f7af.js" rel="prefetch"><link href="/js/home.05cd9bc9.js" rel="prefetch"><link href="/js/message.8e5d5939.js" rel="prefetch"><link href="/js/project.13a6ef8a.js" rel="prefetch"><link href="/css/app.86769c9d.css" rel="preload" as="style"><link href="/css/chunk-vendors.902ebb66.css" rel="preload" as="style"><link href="/js/app.0e77813e.js" rel="modulepreload" as="script"><link href="/js/chunk-vendors.fd1905bd.js" rel="modulepreload" as="script"><link href="/css/chunk-vendors.902ebb66.css" rel="stylesheet"><link href="/css/app.86769c9d.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but my-site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"><style>.loading-img{
-          position: fixed;
-          width: 250px;
-          height: 250px;
-          left: 50%;
-          top: 50%;
-          margin-left: -100px;
-          margin-top: -100px;
-        }</style><img class="loading-img" src="./img/loading.gif" alt=""></div><script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.min.js"></script><script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.6.2/vuex.min.js"></script><script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.5.3/vue-router.min.js"></script><script src="https://cdn.bootcdn.net/ajax/libs/axios/0.24.0/axios.min.js"></script><script type="module" src="/js/chunk-vendors.fd1905bd.js"></script><script type="module" src="/js/app.0e77813e.js"></script><script>!function(){var e=document,t=e.createElement("script");if(!("noModule"in t)&&"onbeforeload"in t){var n=!1;e.addEventListener("beforeload",function(e){if(e.target===t)n=!0;else if(!e.target.hasAttribute("nomodule")||!n)return;e.preventDefault()},!0),t.type="module",t.src=".",e.head.appendChild(t),t.remove()}}();</script><script src="/js/chunk-vendors-legacy.86131816.js" nomodule></script><script src="/js/app-legacy.3a3e8de5.js" nomodule></script></body></html>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title></title>
+  <link href="./css/about.7efacdaf.css" rel="prefetch">
+  <link href="./css/blog.6c8974bb.css" rel="prefetch">
+  <link href="./css/blogDetail.042301d9.css" rel="prefetch">
+  <link href="./css/home.57014983.css" rel="prefetch">
+  <link href="./css/message.8b3f60f8.css" rel="prefetch">
+  <link href="./css/project.1c588897.css" rel="prefetch">
+  <link href="./js/about.9ee24772.js" rel="prefetch">
+  <link href="./js/blog.9a3c025a.js" rel="prefetch">
+  <link href="./js/blogDetail.95b4f7af.js" rel="prefetch">
+  <link href="./js/home.05cd9bc9.js" rel="prefetch">
+  <link href="./js/message.8e5d5939.js" rel="prefetch">
+  <link href="./js/project.13a6ef8a.js" rel="prefetch">
+  <link href="./css/app.86769c9d.css" rel="preload" as="style">
+  <link href="./css/chunk-vendors.902ebb66.css" rel="preload" as="style">
+  <link href="./js/app.0e77813e.js" rel="modulepreload" as="script">
+  <link href="./js/chunk-vendors.fd1905bd.js" rel="modulepreload" as="script">
+  <link href="./css/chunk-vendors.902ebb66.css" rel="stylesheet">
+  <link href="./css/app.86769c9d.css" rel="stylesheet">
+</head>
+
+<body><noscript><strong>We're sorry but my-site doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong></noscript>
+  <div id="app">
+    <style>
+      .loading-img {
+        position: fixed;
+        width: 250px;
+        height: 250px;
+        left: 50%;
+        top: 50%;
+        margin-left: -100px;
+        margin-top: -100px;
+      }
+    </style><img class="loading-img" src="./img/loading.gif" alt="">
+  </div>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.6.2/vuex.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.5.3/vue-router.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.24.0/axios.min.js"></script>
+  <script type="module" src="/js/chunk-vendors.fd1905bd.js"></script>
+  <script type="module" src="/js/app.0e77813e.js"></script>
+  <script>
+    ! function () {
+      var e = document,
+        t = e.createElement("script");
+      if (!("noModule" in t) && "onbeforeload" in t) {
+        var n = !1;
+        e.addEventListener("beforeload", function (e) {
+          if (e.target === t) n = !0;
+          else if (!e.target.hasAttribute("nomodule") || !n) return;
+          e.preventDefault()
+        }, !0), t.type = "module", t.src = ".", e.head.appendChild(t), t.remove()
+      }
+    }();
+  </script>
+  <script src="/js/chunk-vendors-legacy.86131816.js" nomodule></script>
+  <script src="/js/app-legacy.3a3e8de5.js" nomodule></script>
+</body>
+
+</html>
