--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.6.2/vuex.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.5.3/vue-router.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.24.0/axios.min.js"></script>
-  <script type="module" src="/js/chunk-vendors.fd1905bd.js"></script>
-  <script type="module" src="/js/app.0e77813e.js"></script>
+  <script type="module" src="./js/chunk-vendors.fd1905bd.js"></script>
+  <script type="module" src="./js/app.0e77813e.js"></script>
   <script>
     ! function () {
       var e = document,
@@ -61,8 +61,8 @@
       }
     }();
   </script>
-  <script src="/js/chunk-vendors-legacy.86131816.js" nomodule></script>
-  <script src="/js/app-legacy.3a3e8de5.js" nomodule></script>
+  <script src="./js/chunk-vendors-legacy.86131816.js" nomodule></script>
+  <script src="./js/app-legacy.3a3e8de5.js" nomodule></script>
 </body>
 
 </html>
