--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.5.3/vue-router.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.24.0/axios.min.js"></script>
   <script type="module" src="./js/chunk-vendors.fd1905bd.js"></script>
-  <script type="module" src="/js/app.0e77813e.js"></script>
+  <script type="module" src="./js/app.0e77813e.js"></script>
   <script>
     ! function () {
       var e = document,
